# DSSearch-Engine

./: CMakeLists.txt  DSAVLTree.h  Documentation.md  File_Parser.cpp  File_Parser.h  Query_Parser.cpp  Query_Parser.h  README.md  UserInterface.cpp  UserInterface.h  main.cpp  persistenceInfo.txt  persistencetest.txt  stopwords.txt
